<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/newReportCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:onClick="newReport"
            app:cardBackgroundColor="@color/green"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardMaxElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/new_report"
                    android:layout_gravity="center_horizontal"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/registerMarginTop"
                    android:paddingRight="@dimen/registerMarginTop"
                    android:text="@string/newReport"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewReportsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:onClick="viewReports"
            app:cardBackgroundColor="@color/blue"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardMaxElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/view_reports"
                    android:layout_gravity="center_horizontal"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/viewReports"
                    android:paddingLeft="@dimen/registerMarginTop"
                    android:paddingRight="@dimen/registerMarginTop"
                    android:onClick="viewReports"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/editDataCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:onClick="editData"
            app:cardBackgroundColor="@color/orange"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardMaxElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/edit_user"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/registerMarginTop"
                    android:paddingRight="@dimen/registerMarginTop"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/editData"
                    android:onClick="editData"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/manageMetersCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:onClick="manageMeters"
            app:cardBackgroundColor="@color/blue"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardMaxElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/edit_data"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Gázórák kezelése"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/logoutCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:onClick="logout"
            app:cardBackgroundColor="@color/orange"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            app:cardMaxElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:padding="12dp"
                    android:src="@drawable/logout"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:paddingLeft="@dimen/registerMarginTop"
                    android:paddingRight="@dimen/registerMarginTop"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>